# nonebot-plugin-learning-chat

./: pyproject.toml
nonebot_plugin_learning_chat/: __init__.py  config.py  web_api.py  web_page_simple.py
