[tool.poetry]
name = "nonebot_plugin_learning_chat"
version = "0.4.0"
description = "Nonebot2 plugin to learn what your group members say."
authors = ["CMHopeSunshine <277073121@qq.com>"]
keywords = ["nonebot2"]
homepage = "https://github.com/CMHopeSunshine/nonebot-plugin-learning-chat"
readme = "README.md"
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = { version = "^2.4.0", extras = ["fastapi"] }
nonebot-adapter-onebot = "^2.4.0"
nonebot-plugin-apscheduler = "^0.4.0"
tortoise-orm = "^0.25.0"
jieba = "^0.42.1"
"ruamel.yaml" = "^0.19.0"
jinja2 = "^3.1.0"  # 用于简单的 HTML 模板
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
nonebot-plugin-tortoise-orm = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
